--- a/Views/Home/Collection1.cshtml
+++ b/Views/Home/Collection1.cshtml
@@ -9,55 +9,61 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-md-3 ">
     <div class="container-fluid py-0">
         <a class="navbar-brand font1  text-white fs-1 heading" asp-area="" asp-controller="Home" asp-action="Index">
-            <img src="~/img/logo.png" class="logo-img mb-2"
-                 style="width: 3rem; height: 3rem;" alt="">Store To Door
+            <img src="~/img/logo.png" class="logo-img mb-2" style="width: 3rem; height: 3rem;" alt="">Store To Door
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page"
-                       asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
+                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page" asp-area=""
+                        asp-controller="Home" asp-action="Index">HOME</a>
                 </li>
-                
-               <li class="nav-item">
+
+                <li class="nav-item">
                     <a class="nav-link font2 mx-2 item-2 text-white" asp-controller="home" asp-action="About">ABOUT</a>
-                </li> 
+                </li>
                 @if (User.Identity.IsAuthenticated)
                 {
                     var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
-                    
+
                     @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
                     {
                         <li class="nav-item dropdown">
                             <a class="nav-link font2  mx-2 item-3 text-white active bottom-purple"
-                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            SHOP
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
-                        </ul>
-                    </li>}
-                }else{
+                        id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                SHOP
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By
+                                        Medium</a></li>
+                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By
+                                        Artist</a></li>
+                            </ul>
+                        </li>
+                    }
+                }
+                else
+                {
                     <li class="nav-item dropdown">
-                            <a class="nav-link font2  mx-2 item-3 text-white active bottom-purple"
-                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link font2  mx-2 item-3 text-white active bottom-purple"
+                        id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             SHOP
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By
+                                    Medium</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By
+                                    Artist</a></li>
                         </ul>
                     </li>
                 }
 
                 <li class="nav-item dropdown">
                     <a class="nav-link  font2 mx-2 item-4 text-white" id="navbarDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         PROFILE
                     </a>
                     <partial name="_LoginPartial" />
@@ -80,17 +86,19 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
-                    
-                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User)){
-                    <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
-                        </li>}
+
+                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
+                    {
+                        <li class="nav-item">
+                            <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                        </li>
+                    }
                 }
                 else
                 {
                     <li class="nav-item">
                         <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
-                        </li>
+                    </li>
                 }
 
                 @if (User.Identity.IsAuthenticated)
@@ -99,19 +107,26 @@
                     {
                         <li class="nav-item">
                             <a asp-controller="home" asp-action="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN</a>
-                </li> }}
-                 @if (User.Identity.IsAuthenticated)
+                        </li>
+                    }
+
+                }
+                @if (User.Identity.IsAuthenticated)
                 {
                     @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Artist"))
                     {
                         <li class="nav-item">
-                            <a asp-controller="home" asp-action="ArtistProfile" class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
-                </li> }}
+                            <a asp-controller="home" asp-action="ArtistProfile"
+                        class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
+                        </li>
+                    }
+
+                }
             </ul>
             <div class="nav-item search-box rounded-pill bg-dark ms-3">
                 <input type="text" class="search-txt float-start fs-6 text-white" placeholder="search here..">
                 <a class="nav-link font2 search-btn d-flex justify-content-center align-items-center rounded-circle text-white"
-                   href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
+                    href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
             </div>
         </div>
     </div>
@@ -121,24 +136,29 @@
         <div class="row mt-5 pt-4">
             <div class="col-lg-6 col-md-12 col-sm-12 col-12 d-flex justify-content-center align-items-center">
                 <div class="container d-flex justify-content-center pb-3">
-                    <img src="~/img/painting1profile.jpg" class="img-fluid" alt="">
+                    <img src="~/uploads/@(ViewBag.artistCollection.File)" class="img-fluid" alt="">
                 </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-12 font2 text-center">
-                <h2>Oil painting</h2>
-                <p class="ps-4">By Handmade Creations</p>
+                <h2>@ViewBag.artistCollection.Title</h2>
+                <p class="ps-4">By @ViewBag.artist.AccountName</p>
                 <p class="mt-2 fs-5">Painting on stretched canvas</p>
                 <p class="mt-2 fs-5">Finished edges </p>
                 <p class="mt-2 fs-5"> Ready to hang</p>
                 <p class="fs-5"> 20'' h x 16'' w x .75'' d 1 lbs. 1 oz</p>
-                <p class="fs-5 mb-4">PRICE - Rs 400 </p>
+                <p class="fs-5 mb-4">PRICE - Rs @ViewBag.artistCollection.Price </p>
                 <div class="d-grid gap-2 col-6 mx-auto">
-                    <a asp-controller="home" asp-action="Cart"
-                       class="bg-pink-orange   text-white px-5 py-2  mx-2 rounded text-decoration-none font2">
-                        Add to Cart
-                    </a>
+                    <form method="post" aso-controller="Home" asp-action="Cart">
+                        <input type="hidden" name="Id" value="@ViewBag.artistCollection.Id">
+                        <button class="btn bg-pink-orange text-white px-5 py-2  mx-2 rounded text-decoration-none font2"
+                            type="submit">Add to Cart</button>
+                        @* <a asp-controller="home" asp-action="Cart"
+                            class="bg-pink-orange text-white px-5 py-2 mx-2 rounded text-decoration-none font2">
+                            Add to Cart
+                            </a> *@
+                    </form>
                     <a asp-controller="home" asp-action="Wishlist"
-                       class="bg-pink-orange  text-white px-5 py-2 mx-2 rounded text-decoration-none font2">
+                        class="bg-pink-orange  text-white px-5 py-2 mx-2 rounded text-decoration-none font2">
                         Add to Wishlist
                     </a>
                 </div>
