--- a/Views/Home/Address.cshtml
+++ b/Views/Home/Address.cshtml
@@ -9,55 +9,61 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-md-3 ">
     <div class="container-fluid py-0">
         <a class="navbar-brand font1  text-white fs-1 heading" asp-area="" asp-controller="Home" asp-action="Index">
-            <img src="~/img/logo.png" class="logo-img mb-2"
-                 style="width: 3rem; height: 3rem;" alt="">Store To Door
+            <img src="~/img/logo.png" class="logo-img mb-2" style="width: 3rem; height: 3rem;" alt="">Store To Door
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page"
-                       asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
+                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page" asp-area=""
+                        asp-controller="Home" asp-action="Index">HOME</a>
                 </li>
-                
-               <li class="nav-item">
+
+                <li class="nav-item">
                     <a class="nav-link font2 mx-2 item-2 text-white" asp-controller="home" asp-action="About">ABOUT</a>
-                </li> 
+                </li>
                 @if (User.Identity.IsAuthenticated)
                 {
                     var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
-                    
+
                     @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
                     {
                         <li class="nav-item dropdown">
-                            <a class="nav-link font2  mx-2 item-3 text-white"
-                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            SHOP
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
-                        </ul>
-                    </li>}
-                }else{
+                            <a class="nav-link font2  mx-2 item-3 text-white" id="navbarDarkDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                                SHOP
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By
+                                        Medium</a></li>
+                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By
+                                        Artist</a></li>
+                            </ul>
+                        </li>
+                    }
+                }
+                else
+                {
                     <li class="nav-item dropdown">
-                            <a class="nav-link font2  mx-2 item-3 text-white"
-                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link font2  mx-2 item-3 text-white" id="navbarDarkDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                             SHOP
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By
+                                    Medium</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By
+                                    Artist</a></li>
                         </ul>
                     </li>
                 }
 
                 <li class="nav-item dropdown">
                     <a class="nav-link  font2 mx-2 item-4 text-white" id="navbarDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         PROFILE
                     </a>
                     <partial name="_LoginPartial" />
@@ -80,17 +86,21 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
-                    
-                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User)){
-                    <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white bottom-green active">CART</a>
-                        </li>}
+
+                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
+                    {
+                        <li class="nav-item">
+                            <a asp-controller="home" asp-action="Cart"
+                        class="nav-link font2 mx-2 item-5 text-white bottom-green active">CART</a>
+                        </li>
+                    }
                 }
                 else
                 {
                     <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white active bottom-green">CART</a>
-                        </li>
+                        <a asp-controller="home" asp-action="Cart"
+                        class="nav-link font2 mx-2 item-5 text-white active bottom-green">CART</a>
+                    </li>
                 }
 
                 @if (User.Identity.IsAuthenticated)
@@ -99,92 +109,101 @@
                     {
                         <li class="nav-item">
                             <a asp-controller="home" asp-action="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN</a>
-                </li> }}
-                 @if (User.Identity.IsAuthenticated)
+                        </li>
+                    }
+
+                }
+                @if (User.Identity.IsAuthenticated)
                 {
                     @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Artist"))
                     {
                         <li class="nav-item">
-                            <a asp-controller="home" asp-action="ArtistProfile" class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
-                </li> }}
+                            <a asp-controller="home" asp-action="ArtistProfile"
+                        class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
+                        </li>
+                    }
+
+                }
             </ul>
             <div class="nav-item search-box rounded-pill bg-dark ms-3">
                 <input type="text" class="search-txt float-start fs-6 text-white" placeholder="search here..">
                 <a class="nav-link font2 search-btn d-flex justify-content-center align-items-center rounded-circle text-white"
-                   href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
+                    href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
             </div>
         </div>
     </div>
 </nav>
 <section class="my-5 py-5">
-        <div class="container">
-            <div class="text-center my-5">
-                <span class="font1 text-rose fw-bold heading  m-auto border-bottom border-dark border-3">
-                    Select A Delivery Address
-                </span>
-                <h6 class="font2 my-5">Is the address you'd like to use displayed below? If so, click the corresponding
-                    "Deliver to this address" button Or you can enter <span class="text-rose">a
-                        new delivery address</span> </h6>
-            </div>
-            <div class="row  shadow-sm mt-3 mb-5 p-3 mx-5">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-12 my-1">
-                  <p class="lh-1">Raghav Sharma</p>
+    <div class="container">
+        <div class="text-center my-5">
+            <span class="font1 text-rose fw-bold heading  m-auto border-bottom border-dark border-3">
+                Select A Delivery Address
+            </span>
+            <h6 class="font2 my-5">Is the address you'd like to use displayed below? If so, click the corresponding
+                "Deliver to this address" button Or you can enter <span class="text-rose">a
+                    new delivery address</span> </h6>
+        </div>
+        <div class="row  shadow-sm mt-3 mb-5 p-3 mx-5">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-12 my-1">
+                <p class="lh-1">@UserManager.FindByNameAsync(User.Identity.Name).Result.FirstName @UserManager.FindByNameAsync(User.Identity.Name).Result.LastName</p>
                 <p class="lh-1">Lane no. 12</p>
                 <p class="lh-1">Akhnoor</p>
                 <p class="lh-1">Jammu ,Jammu & Kashmir 180002</p>
-                <p class="lh-1">India</p>  
+                <p class="lh-1">India</p>
                 <p class="lh-1">Phone: 0123456789</p>
-                    <a  asp-controller="home" asp-action="Payment"
-                        class="btn border-0 col-12 col-lg-4 col-sm-12 col-md-6 text-white bg-rose  btn-sm fs-6 px-5 py-2 font2 rounded text-decoration-none shadow-none">Deliver
-                        to this address</a>
-                    <div>
-                        <a asp-controller="home" asp-action="EditUserProfile" class="btn  btn-secondary col-12 col-lg-2 col-md-3 col-sm-5 mt-3">Edit</a>
-                        <a  class="btn  btn-secondary col-12 col-lg-2 col-md-3 col-sm-6 mt-3">Delete </a>
-                    </div>
+                <a asp-controller="home" asp-action="Payment"
+                    class="btn border-0 col-12 col-lg-4 col-sm-12 col-md-6 text-white bg-rose  btn-sm fs-6 px-5 py-2 font2 rounded text-decoration-none shadow-none">Deliver
+                    to this address</a>
+                <div>
+                    <a asp-controller="home" asp-action="EditUserProfile"
+                        class="btn  btn-secondary col-12 col-lg-2 col-md-3 col-sm-5 mt-3">Edit</a>
+                    <a class="btn  btn-secondary col-12 col-lg-2 col-md-3 col-sm-6 mt-3">Delete </a>
                 </div>
             </div>
-            <div class="row  shadow-sm mt-4 p-3 col-lg-6 col-md-8 col-sm-12 col-12">
-                <h3  class="font2 ps-4">Add A New Address</h3>
-                <hr>
-                <form class="mt-3">
-                    <div class="container d-flex justify-content-center">
-                        <div class="row py-2">
-                            <div class="py-2 col-lg-12">
-                                <label for="inputName" class="form-label">Full name (First and Last Name)</label>
-                                <input type="text" class="form-control new-address  shadow-none" id="inputName">
-                            </div>
-                            <div class="py-2 col-lg-12">
-                                <label for="inputStreet" class="form-label">Street</label>
-                                <input type="text" class="form-control  new-address shadow-none" id="inputStreet">
-                            </div>
-                            <div class="py-2 col-lg-12">
-                                <label for="inputCity" class="form-label">City</label>
-                                <input type="text" class="form-control  new-address  shadow-none" id="inputCity">
-                            </div>
-                            <div class="py-2 col-lg-12">
-                                <label  for="inputState" class="form-label">State</label>
-                                <input  type="text" class="form-control  new-address shadow-none" id="inputState">                       
-                            </div>
-                            <div class="py-2 col-lg-12">
-                                <label  for="inputPincode" class="form-label">Pincode</label>
-                                <input  type="text" class="form-control  new-address shadow-none" id="inputPincode">
-                            </div>
-                            <div class="py-2 col-lg-12">
-                                <label for="inputAddresstype" class="form-label">Address Type</label>
-                                <input type="text" class="form-control new-address shadow-none" id="inputAddresstype">
-                            </div>
-                            <div class="py-2 col-lg-12">
-                                <input class="form-check-input shadow-none new-address" type="checkbox" value="" id="flexCheckDefault">
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    Use this as default address
-                                </label>
-                            </div>
-                            <div class="d-grid gap-2 col-sm-8  pt-4 pb-5 ">
-                                <a class="btn bg-rose text-white shadow-none">Use this address</a>
-                            </div>
+        </div>
+        <div class="row  shadow-sm mt-4 p-3 col-lg-6 col-md-8 col-sm-12 col-12">
+            <h3 class="font2 ps-4">Add A New Address</h3>
+            <hr>
+            <form class="mt-3">
+                <div class="container d-flex justify-content-center">
+                    <div class="row py-2">
+                        <div class="py-2 col-lg-12">
+                            <label for="inputName" class="form-label">Full name (First and Last Name)</label>
+                            <input type="text" class="form-control new-address  shadow-none" id="inputName">
+                        </div>
+                        <div class="py-2 col-lg-12">
+                            <label for="inputStreet" class="form-label">Street</label>
+                            <input type="text" class="form-control  new-address shadow-none" id="inputStreet">
+                        </div>
+                        <div class="py-2 col-lg-12">
+                            <label for="inputCity" class="form-label">City</label>
+                            <input type="text" class="form-control  new-address  shadow-none" id="inputCity">
+                        </div>
+                        <div class="py-2 col-lg-12">
+                            <label for="inputState" class="form-label">State</label>
+                            <input type="text" class="form-control  new-address shadow-none" id="inputState">
+                        </div>
+                        <div class="py-2 col-lg-12">
+                            <label for="inputPincode" class="form-label">Pincode</label>
+                            <input type="text" class="form-control  new-address shadow-none" id="inputPincode">
+                        </div>
+                        <div class="py-2 col-lg-12">
+                            <label for="inputAddresstype" class="form-label">Address Type</label>
+                            <input type="text" class="form-control new-address shadow-none" id="inputAddresstype">
+                        </div>
+                        <div class="py-2 col-lg-12">
+                            <input class="form-check-input shadow-none new-address" type="checkbox" value=""
+                                id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Use this as default address
+                            </label>
+                        </div>
+                        <div class="d-grid gap-2 col-sm-8  pt-4 pb-5 ">
+                            <a class="btn bg-rose text-white shadow-none">Use this address</a>
                         </div>
                     </div>
-                </form>
-            </div>
-            </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </section>
