--- a/Views/Home/ArtistProfile.cshtml
+++ b/Views/Home/ArtistProfile.cshtml
@@ -135,11 +135,19 @@
     <div class="container pt-3">
         <div class="row my-5 pt-3">
             <div class="col-lg-3 col-md-4 col-sm-6 col-10 my-2 pb-2">
-                <img src="~/img/new_artist.png" class="border rounded-circle img-fluid" alt=""
+                @if (ViewBag.loggedInUser.ProfileImage == null || ViewBag.loggedInUser.ProfileImage == "")
+                {
+                    <img src="~/img/new_artist.png" class="border rounded-circle img-fluid" alt=""
                     style="height: 220px; width: 220px;">
+                }
+                else
+                {
+                    <img src="~/profiles/@(ViewBag.loggedInUser.ProfileImage)"
+                    class="border rounded-circle img-fluid img-cover" alt="" style="height: 220px; width: 220px;">
+                }
             </div>
             <div class="col-lg-6 col-md-8 col-sm-12 col-12 font2 text-start position-relative mt-4">
-                @if (ViewBag.loggedInUser.AccountName == "")
+                @if (ViewBag.loggedInUser.AccountName == "" || ViewBag.loggedInUser.AccountName == null)
                 {
                     <h2 class=" font2">Account Name not Set</h2>
                 }
@@ -147,8 +155,8 @@
                 {
                     <h2 class=" font2">@ViewBag.loggedInUser.AccountName</h2>
                 }
-                
-                @if (ViewBag.loggedInUser.Bio == "")
+
+                @if (ViewBag.loggedInUser.Bio == "" || ViewBag.loggedInUser.Bio == null)
                 {
                     <p class="my-3 text-wrap">No Bio</p>
                 }
@@ -165,7 +173,9 @@
                     <a asp-controller="home" asp-action="UploadArtwork"
                         class="btn btn3 shadow-none border-pink text-pink ms-1 me-2 px-3 rounded text-decoration-none font2 ">Upload
                         Artwork</a>
-                     <a asp-controller="home" asp-action="CustomArtRequest" class="btn btn3 shadow-none border-pink text-pink me-4 px-3 rounded text-decoration-none font2 ">Custom Art Requests</a>
+                    <a asp-controller="home" asp-action="CustomArtRequest"
+                        class="btn btn3 shadow-none border-pink text-pink me-4 px-3 rounded text-decoration-none font2 ">Custom
+                        Art Requests</a>
                 </form>
             </div>
         </div>
@@ -176,8 +186,39 @@
                 </tr>
             </thead>
         </table>
+        <div class="row g-4">
+            @foreach (var collection in ViewBag.artistCollection)
+            {
+                <div class="col-12 col-lg-4 col-md-6 ">
+                    <div class="card shadow rounded-3">
+                        <img class="aspect-16-9 img-fluid img-cover rounded-top rounded-3"
+                        src="~/uploads/@(collection.File)" class="card-img-top" alt="Fissure in Sandstone" />
+                        <div class="card-body">
+                            <h5 class="card-title text-pink">@collection.Title</h5>
+                            <p class="card-text d-flex flex-column">
+                                <span>Size: @collection.Size</span>
+                                <span>Category: @collection.Category</span>
+                                <span>Price: @collection.Price</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            }
+        </div>
         <div class="my-5 py-5">
             <p class="text-center">You have not uploaded any images</p>
         </div>
     </div>
 </section>
+
+<style>
+    .aspect-16-9 {
+        aspect-ratio: 16/9;
+    }
+
+    .img-cover {
+        object-fit: cover;
+        object-position: center;
+    }
+</style>
