--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -9,18 +9,17 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-md-3 ">
     <div class="container-fluid py-0">
         <a class="navbar-brand font1  text-white fs-1 heading" asp-area="" asp-controller="Home" asp-action="Index">
-            <img src="~/img/logo.png" class="logo-img mb-2"
-                 style="width: 3rem; height: 3rem;" alt="">Store To Door
+            <img src="~/img/logo.png" class="logo-img mb-2" style="width: 3rem; height: 3rem;" alt="">Store To Door
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page"
-                       asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
+                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page" asp-area=""
+                        asp-controller="Home" asp-action="Index">HOME</a>
                 </li>
 
                 <li class="nav-item">
@@ -33,13 +32,15 @@
                     @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
                     {
                         <li class="nav-item dropdown">
-                            <a class="nav-link font2  mx-2 item-3 text-white"
-                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link font2  mx-2 item-3 text-white" id="navbarDarkDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                                 SHOP
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By
+                                        Medium</a></li>
+                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By
+                                        Artist</a></li>
                             </ul>
                         </li>
                     }
@@ -47,20 +48,22 @@
                 else
                 {
                     <li class="nav-item dropdown">
-                        <a class="nav-link font2  mx-2 item-3 text-white"
-                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link font2  mx-2 item-3 text-white" id="navbarDarkDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                             SHOP
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By
+                                    Medium</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By
+                                    Artist</a></li>
                         </ul>
                     </li>
                 }
 
                 <li class="nav-item dropdown">
                     <a class="nav-link  font2 mx-2 item-4 text-white" id="navbarDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         PROFILE
                     </a>
                     <partial name="_LoginPartial" />
@@ -87,14 +90,16 @@
                     @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
                     {
                         <li class="nav-item">
-                            <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white bottom-green active">CART</a>
+                            <a asp-controller="home" asp-action="Cart"
+                        class="nav-link font2 mx-2 item-5 text-white bottom-green active">CART</a>
                         </li>
                     }
                 }
                 else
                 {
                     <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white active bottom-green">CART</a>
+                        <a asp-controller="home" asp-action="Cart"
+                        class="nav-link font2 mx-2 item-5 text-white active bottom-green">CART</a>
                     </li>
                 }
 
@@ -105,20 +110,25 @@
                         <li class="nav-item">
                             <a asp-controller="home" asp-action="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN</a>
                         </li>
-                    }          }
+                    }
+
+                }
                 @if (User.Identity.IsAuthenticated)
                 {
                     @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Artist"))
                     {
                         <li class="nav-item">
-                            <a asp-controller="home" asp-action="ArtistProfile" class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
+                            <a asp-controller="home" asp-action="ArtistProfile"
+                        class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
                         </li>
-                    }          }
+                    }
+
+                }
             </ul>
             <div class="nav-item search-box rounded-pill bg-dark ms-3">
                 <input type="text" class="search-txt float-start fs-6 text-white" placeholder="search here..">
                 <a class="nav-link font2 search-btn d-flex justify-content-center align-items-center rounded-circle text-white"
-                   href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
+                    href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
             </div>
         </div>
     </div>
@@ -148,33 +158,44 @@
                             <button type="button" class="btn-close shadow-none" aria-label="Close"></button>
                         </td>
                         <td>
-                            <a asp-controller="home" asp-action="Collection1"><img src="~/img/Painting1.jpg" style="height: 6rem; width: 6rem;" alt=""></a>
+                            <a asp-controller="home" asp-action="Collection1" asp-route-id="@ViewBag.item.Id"><img
+                                    class="img-fluid img-cover" src="~/uploads/@(ViewBag.item.File)"
+                                    style="height: 6rem; width: 6rem;" alt=""></a>
                         </td>
                         <td>
-                            <p>Canvas painting</p>
-                            <p>By Handmade Creations</p>
+                            <p>@ViewBag.item.Title</p>
+                            <p>By @ViewBag.artist.AccountName</p>
                             <p>Painting on stretched canvas</p>
                             <p>Finished edges </p>
                             <p> Ready to hang</p>
                             <p> 20'' h x 16'' w x .75'' d 1 lbs. 1 oz</p>
                         </td>
-                        <td>Rs 400</td>
+                        <td>Rs @ViewBag.item.Price</td>
                         <td>
                             <div class="col-4 order">
-                                <input type="number" class="form-control shadow-none" id="inputNumber" min="1" value="1">
+                                <input type="number" class="form-control shadow-none" id="inputNumber" min="1"
+                                    value="1">
                             </div>
                         </td>
                         <td>
-                            <p>Rs 400</p>
+                            <p>Rs @ViewBag.item.Price</p>
                         </td>
                     </tr>
             </table>
             <div class="font-2 py-3 fs-5 fw-bold text-end" id="items">
                 <a asp-controller="home" asp-action="Address"
-                   class="border-0 bg-green text-white btn-lg my-3 mx-2 px-5 py-3 font2 rounded text-decoration-none">Proceed To Buy</a>
+                    class="border-0 bg-green text-white btn-lg my-3 mx-2 px-5 py-3 font2 rounded text-decoration-none">Proceed
+                    To Buy</a>
 
                 <!-- <p class="text-end">Checkout</p> -->
             </div>
         </div>
     </div>
 </section>
+
+<style>
+    .img-cover {
+        object-fit: cover;
+        object-position: center;
+    }
+</style>
